# ObjectGrabbing

./: CMakeLists.txt  README.md  main.cpp  main.hpp
data/: g_T_c.xml  params.xml
